[package]
name = "git-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.20", features = ["derive"] }
sha1 = { version = "0.10.5"}
rust-crypto = "0.2.36"
serde = { version = "1.0.144", features = ["derive"] }
serde_json = { version = "1.0.64" }
thiserror = "1.0.39"